--- a/server/views/pages/sentencing/cannot-delete-offence.njk
+++ b/server/views/pages/sentencing/cannot-delete-offence.njk
@@ -26,7 +26,7 @@
                     This affects case {{formatAppearanceDetails(sentencesAfterDetails.appearances[0])}}
                 {% else %}
                     This affects:  
-                    <ul class="govuk-list govuk-list-bullet">
+                    <ul class="govuk-list govuk-list-bullet" data-qa="appearanceDetails">
                         {% for appearanceDetails in sentencesAfterDetails.appearances %}
                             <li>Case {{formatAppearanceDetails(appearanceDetails) }}</strong></li>
                         {% endfor %}
