--- a/server/views/pages/sentencing/appearance-details.njk
+++ b/server/views/pages/sentencing/appearance-details.njk
@@ -221,6 +221,10 @@
             consecutiveTo: sessionConsecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceReference] if offence.sentence and offence.sentence.consecutiveToSentenceReference else consecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceUuid],
             sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] | sentenceTypeValueOrLegacy(offence.sentence.legacyData),
             fineAmount: offence.sentence.fineAmount,
+            consecutiveConcurrentLink: {
+                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.index + "/select-consecutive-concurrent",
+                text: 'Select consecutive or current'
+            } if offence.sentence,
             actions: {
                 items: [
                     {
@@ -229,7 +233,7 @@
                         visuallyHiddenText: "edit offence"
                     },
                     {
-                        href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.index + "/delete-offence",
+                        href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/sentencing/offences/" + offence.index + "/check-delete-offence",
                         text: "Delete",
                         visuallyHiddenText: "delete offence"
                     }
@@ -262,6 +266,10 @@
                     consecutiveTo: consecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceUuid],
                     sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
                     fineAmount: offence.sentence.fineAmount,
+                    consecutiveConcurrentLink: {
+                        href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.index + "/select-consecutive-concurrent",
+                        text: 'Select consecutive or current'
+                    } if offence.sentence,
                     actions: {
                         items: [
                             {
@@ -270,7 +278,7 @@
                                 visuallyHiddenText: "edit offence"
                             },
                             {
-                                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.index + "/delete-offence",
+                                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/sentencing/offences/" + offence.index + "/check-delete-offence",
                                 text: "Delete",
                                 visuallyHiddenText: "delete offence"
                             }
