--- a/server/views/pages/sentencing/cannot-delete-offence.njk
+++ b/server/views/pages/sentencing/cannot-delete-offence.njk
@@ -2,7 +2,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 
-{% set pageTitle = "remand - Cannot delete offence" %}
+{% set pageTitle = "sentencing - Cannot delete offence" %}
 
 {% block content %}
     <div class="govuk-grid-row govuk-!-margin-top-4">
