RASS-1183 go back link to edit appearance

--- a/server/views/pages/sentencing/delete-sentence-in-chain.njk
+++ b/server/views/pages/sentencing/delete-sentence-in-chain.njk
@@ -17,7 +17,7 @@
                 },
                 secondaryAction: {
                     text: "Go back",
-                    href: backLink
+                    href: goBackLink
                 }
             })%}
                 <p class="govuk-body-l govuk-!-width-three-quarters">
