--- a/server/views/pages/courtAppearance/appearance-details.njk
+++ b/server/views/pages/courtAppearance/appearance-details.njk
@@ -218,7 +218,7 @@
                             actions: {
                                 items: [
                                     {
-                                        href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + loop.index0 + "/edit-offence",
+                                        href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + loop.index0 + "/load-edit-offence",
                                         text: "Edit",
                                         visuallyHiddenText: "edit"
                                     },
