--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -146,14 +146,14 @@
 
             <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Court documents</h3>
             <ul class="govuk-list govuk-list--no--bullet govuk-!-margin-bottom-3" data-qa="court-documents">
-                {% if appearance.documents | length == 0 %}
+                {% if documentsWithUiType | length == 0 %}
                     No documents uploaded
                 {% else %}
-                    {# This will need to be documents array on object #}
-                    {% for document in['Remand warrant'] %}
-                        <li>
-                            {{ documentLink(document) }}
-                        </li>
+                    {% for document in documentsWithUiType %}
+                      <a class="govuk-link" target="_blank" href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/edit-court-appearance/{{ appearance.appearanceUuid }}/{{ document.documentUUID }}/download-document">
+                        <strong>{{ document.documentType }}</strong>
+                      </a>
+                      <br>
                     {% endfor %}
                 {% endif %}
             </ul>
