RASS-1225 display blank when no conviction date

--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -70,7 +70,7 @@
                     key: {
                         text: "Conviction date"
                     }, value: {
-                        text: (offence.sentence.convictionDate | formatDate if offence.sentence.convictionDate else 'N/A')
+                        text: (offence.sentence.convictionDate | formatDate if offence.sentence.convictionDate else '')
                     },
                     actions: {
                         items: [{
