RASS-1190 documents can be added/managed during edit appearance journey

--- a/server/views/pages/courtAppearance/document-upload.njk
+++ b/server/views/pages/courtAppearance/document-upload.njk
@@ -19,7 +19,7 @@
                         classes: "govuk-fieldset__legend--l"
                     },
                     hint: {
-                        text: "You can upload .pdf, .jpg, .doc or .docx files."
+                        text: "You can upload .pdf, .jpg, .png, .doc or .docx files."
                     },
                     attributes: {
                         accept: "image/*,.pdf, .doc,.docx"
