--- a/server/views/pages/courtAppearance/appearance-details.njk
+++ b/server/views/pages/courtAppearance/appearance-details.njk
@@ -182,6 +182,33 @@
                     }
                 }) }}
 
+            <h2 class="govuk-heading-m">Court documents</h2>
+                       <ul class="govuk-list govuk-list--no--bullet govuk-!-margin-bottom-3" data-qa="court-documents">
+                         {% for document in documentsWithUiType %}
+                           <li>
+                             <span style="vertical-align: middle;">
+                               <svg class="moj-timeline__document-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 20" width="20" height="16">
+                                 <path d="M9 7V1.5L14.5 7H9zM2 0C.9 0 0 .9 0 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6l-6-6H2z"></path>
+                               </svg>
+                               <a class="govuk-link" target="_blank" href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/{{ document.documentUUID }}/download-document">
+                                 <strong>{{ document.documentType }}</strong>
+                               </a>
+                             </span>
+                           </li>
+                         {% else %}
+                           <li>No documents uploaded</li>
+                         {% endfor %}
+                       </ul>
+                       <p class="govuk-body">
+                         <a class="govuk-link" href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/upload-court-documents">
+                           {% if documentsWithUiType | length > 0 %}
+                             Manage court documents
+                           {% else %}
+                             Add court documents
+                           {% endif %}
+                         </a>
+                       </p>
+
             <h2 class="govuk-heading-m">Offences <span class="govuk-body">({{ appearance.offences | length }})</span></h2>
 
             {{ govukButton({
