--- a/server/views/pages/courtAppearance/upload-court-documents.njk
+++ b/server/views/pages/courtAppearance/upload-court-documents.njk
@@ -9,9 +9,13 @@
 <div class="govuk-!-margin-right-8">
 <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-upload-court-documents">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-      <h1 class="govuk-heading-l">Upload court documents</h1>
+      {% if addOrEditCourtAppearance == 'edit-court-appearance' %}
+        <h1 class="govuk-heading-l">Manage court documents</h1>
+      {% else %}
+        <h1 class="govuk-heading-l">Upload court documents</h1>
+      {% endif %}
       <p class="govuk-hint">
-        Uploading documents is optional. The selected file type should be among .PDF, .JPG, .DOC and .DOCX under 50MB.
+        Uploading documents is optional. The selected file type should be among .PDF, .JPG, .PNG, .DOC and .DOCX under 50MB.
       </p>
 
       {% set documentTypesToDisplay = [
