--- a/server/views/pages/offence/fine-amount.njk
+++ b/server/views/pages/offence/fine-amount.njk
@@ -11,6 +11,7 @@
     {{ govukInput({
       id: "fineAmount",
       name: "fineAmount",
+      value: offenceFineAmountForm.fineAmount,
       label: {
         text: "What is the fine amount?",
         classes: "govuk-label--l",
