upload document backlink fixed

--- a/server/views/pages/sentencing/appearance-details.njk
+++ b/server/views/pages/sentencing/appearance-details.njk
@@ -203,7 +203,7 @@
              {% endfor %}
            </ul>
            <p class="govuk-body">
-            <a class="govuk-link" href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/upload-court-documents">
+            <a class="govuk-link" href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/upload-court-documents">
               {% if documentsWithUiType | length > 0 %}
                 Manage court documents
               {% else %}
